fix: fix button pointer add: add main.js

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
             <div class="articles">
                 <article>
                     <h3>Falamos com você</h3>
-                    <form>
-                        <input type="text" placeholder="Seu nome"><br>
-                        <input type="email" placeholder="Seu email"><br>
-                        <input type="tel" placeholder="Seu telefone"><br>
-                        <textarea placeholder="Sua mensagem" cols="30" rows="10"></textarea>
+                    <form id="form-contato">
+                        <input id="nome" type="text" placeholder="Seu nome completo"><br>
+                        <input id="email" type="email" placeholder="Seu email"><br>
+                        <input id="telefone" type="tel" placeholder="Seu telefone"><br>
+                        <textarea id="mensagem" placeholder="Sua mensagem" cols="30" rows="10"></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </article>
@@ -182,5 +182,7 @@
             <img src="imagens/logo_lockers_80.png" alt="logo da lockers">
         </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
