--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <title>Lockers</title>
 </head>
 <body>
-    <header>
+    <header class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <img src="imagens/logo_lockers_80.png" alt="logo da lockers">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#lockers">Lockers</a>
+            <button type="button" class="custom-toggler navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
+                <span class="navbar-toggler-icon navbar"></span>
+            </button>
+            <nav id="menu" class="collapse navbar-collapse justify-content-end">
+                <ul class="nav nav-pills d-block d-md-flex">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#lockers">Lockers</a>
                     </li>
                     <li>
-                        <a href="#surfboards">Surfboards</a>
+                        <a class="nav-link" href="#surfboards">Surfboards</a>
                     </li>
                     <li>
-                        <a href="#acessorios">Acessórios</a>
+                        <a class="nav-link" href="#acessorios">Acessórios</a>
                     </li>
                     <li>
-                        <a href="#valores">Sobre Nós</a>
+                        <a class="nav-link" href="#valores">Sobre Nós</a>
                     </li>
                     <li>
-                        <a href="#about">Fale Conosco</a>
+                        <a class="nav-link" href="#about">Fale Conosco</a>
                     </li>
                 </ul>
             </nav>
@@ -185,6 +189,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
