--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </section>
         <footer id="rodapé" style="background-color: #181818; color: white;">
             <div class="d-flex justify-content-between align-items-center container">
-                <p class="m-0 pe-1">&copy; Direitos reservados Lockers Locação de Armários</p>
+                <p class="m-0 pe-1">&copy; Direitos reservados <span>Lockers Locação de Armários</span></p>
                 <img src="imagens/icon/logo_lockers_80.png" alt="logo da lockers">
             </div>
         </footer>
